--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="container">
 				<nav class="navbar navbar-light justify-content-between">
 					<a class="navbar-brand"
-						><img src="img/logo.png" width="75" height="75"
+						><img src="img/logo.png" width="60" height="60"
 					/></a>
 					<button
 						type="button"
@@ -81,7 +81,7 @@
 						</button>
 					</div>
 					<div class="modal-body">
-						Coming soon :)
+						Coming soon :) <br /><br />
 						<button
 							type="button"
 							class="btn btn-info btn-theme"
@@ -90,7 +90,10 @@
 							Close
 						</button>
 					</div>
-					<div class="modal-footer">Made with &nbsp;<span style="color:red">&hearts;</span>&nbsp; by Bucharest School of AI</div>
+					<div class="modal-footer">
+						Made with &nbsp;<span style="color:red">&hearts;</span>&nbsp; by
+						Bucharest School of AI
+					</div>
 				</div>
 			</div>
 		</div>
